NLP TP's/texts/robotics/robotics.stackexchange_0000073868.txt
Q:

Compiling rosfalcon

Hi,
I am currently working on a project where I have to control a Jackal robot with a Novint Falcon controller through ROS and matlab.
My setup is ros indigo running on top of ubuntu 14.04.
I found this: RosFalcon.
First had to install its dependencies (Boost and libnifalcon).
It's a pretty old package and is made for the older rosbuild system.
Compiling the package (using rosmake rosfalcon) I have encountered a few errors, which I don't know how to handle, most of them are of similar nature to this one:
rosbuild_workspace/rosfalcon/src/falcon_cs_pid.cpp:129:22: error: ‘class libnifalcon::FalconDevice’ has no member named ‘getFalconFirmware’
     m_falconDevice.getFalconFirmware()->setLEDStatus(libnifalcon::FalconFirmware::BLUE_LED);
                    ^

I have opened the files linked in the includes (namely FalconDevice.h from usr/local/include/falcon/core) and they do contain the getFalconFirmware function, so do the libnifalcon library source files which I have compiled and installed. (they contain the function as an inline in the headers)
Searching the web for similar problems has netted no results.
Any help would be really appreciated.
Thanks,
Tal

Originally posted by RisinT96 on ROS Answers with karma: 1 on 2016-05-10
Post score: 0

A:

I have updated the package to work with later versions of ROS. You can find it here.
https://github.com/adnanmunawar/ros_falcon

Originally posted by Adnan Munawar with karma: 71 on 2017-03-22
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by stevensu1838 on 2019-10-07:
Hi,
Ubuntu 14.04 ROS indigo
I follow your readme instrutions and I got the following errors. Can you please help?
[ 97%] [ 97%] Building CXX object ros_falcon/CMakeFiles/falcon_control.dir/src/falcon_control.cpp.o
[ 98%] [ 98%] Building CXX object ros_falcon/CMakeFiles/falcon_cs_pid.dir/src/falcon_cs_pid.cpp.o
[ 98%] [ 98%] Building CXX object ros_falcon/CMakeFiles/joystick.dir/src/joystick.cpp.o
Built target ros_falcon_generate_messages
Building CXX object ros_falcon/CMakeFiles/falcon_js_pid.dir/src/falcon_js_pid.cpp.o
Building CXX object ros_falcon/CMakeFiles/driver.dir/src/driver.cpp.o
[100%] Building CXX object ros_falcon/CMakeFiles/gripper.dir/src/gripper.cpp.o
/home/ted/catkin_ws/src/ros_falcon/src/joystick.cpp:19:38: fatal error: falcon/core/FalconDevice.h: No such file or directory
#include "falcon/core/FalconDevice.h"
^
compilation terminated.

Please help

